WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23538
REGRESSION (
r39969
): Garbage text instead of blank content rendered when plug-ins are disabled
https://bugs.webkit.org/show_bug.cgi?id=23538
Summary
REGRESSION (r39969): Garbage text instead of blank content rendered when plug...
Darin Adler
Reported
2009-01-25 15:00:15 PST
Code to handle the case where we have an ActiveX plug-in that was added back in
http://trac.webkit.org/changeset/39115
combined with code to handle the case of disabled plug-ins in
http://trac.webkit.org/changeset/39969
to create a bad effect. Due to the combined effect of these changes we'd ignore the class ID and MIME type entirely, and render plug-in content as HTML. * STEPS TO REPRODUCE 1) Disable plug-ins 2) Go to
http://www.ilounge.com/
or
http://www.talkingpointsmemo.com/
3) Reload page if necessary * RESULTS Banner ads or sometimes embedded Flash content on those websites contain garbage text rather than being rendered blank.
Attachments
patch
(8.40 KB, patch)
2009-01-25 15:27 PST
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2009-01-25 15:03:51 PST
<
rdar://problem/6523719
>
Darin Adler
Comment 2
2009-01-25 15:27:52 PST
Created
attachment 27030
[details]
patch
Darin Adler
Comment 3
2009-01-25 15:43:25 PST
http://trac.webkit.org/changeset/40234
Mark Rowe (bdash)
Comment 4
2009-01-26 12:31:06 PST
***
Bug 23537
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug